# CodeToMarkdown

./: .editorconfig  .gitignore  CHANGELOG.md  CLEAN_OPTIMIZATION_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CodeToMarkdown.spec  LICENSE  PROJECT_CODEBUNDLE.md  README.md  SECURITY.md  build.py  build_release.py  env.example  pyproject.toml  run.py  version_info.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
code_to_markdown.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
demo_project/: .gitignore  README.md  config.json  main.py
demo_project/config/: config.json  settings.py
demo_project/static/: app.js  style.css
demo_project/tests/: test_main.py
demo_project/utils/: __init__.py  helpers.py  validators.py
release/: CHANGELOG.md
src/: __init__.py  annotations.py  config.py  file_discovery.py  i18n.py  logging_setup.py  main.py  md_builder.py  ui.py  utils.py  worker.py
tests/: __init__.py  test_annotations.py  test_file_discovery.py  test_md_builder.py
